info.txt
Configuration on demand is an incubating feature.
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs UP-TO-DATE
> Task :app:mergeDebugResources
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE

> Task :app:stripDebugDebugSymbols
Unable to strip the following libraries, packaging them as they are: libbarhopper_v3.so, libimage_processing_util_jni.so.

> Task :app:processDebugResources
> Task :app:validateSigningDebug

> Task :app:compileDebugJavaWithJavac
/workspaces/QRLD/app/src/main/java/com/qrmaster/app/utils/PermissionsHelper.java:11: error: class PermissionHelper is public, should be declared in a file named PermissionHelper.java
public class PermissionHelper {
       ^
/workspaces/QRLD/app/src/main/java/com/qrmaster/app/viewmodels/QRViewModel.java:6: error: cannot find symbol
import androidx.lifecycle.AndroidViewModel;
                         ^
  symbol:   class AndroidViewModel
  location: package androidx.lifecycle
/workspaces/QRLD/app/src/main/java/com/qrmaster/app/viewmodels/QRViewModel.java:12: error: cannot find symbol
public class QRViewModel extends AndroidViewModel {
                                 ^
  symbol: class AndroidViewModel
/workspaces/QRLD/app/src/main/java/com/qrmaster/app/adapters/QRAdapter.java:120: error: cannot find symbol
            case "Location": return R.drawable.ic_location;
                                              ^
  symbol:   variable ic_location
  location: class drawable
/workspaces/QRLD/app/src/main/java/com/qrmaster/app/fragments/SavedFragment.java:38: error: incompatible types: FragmentActivity cannot be converted to ViewModelProviderImpl
        viewModel = new ViewModelProvider(requireActivity()).get(QRViewModel.class);
                                                         ^
/workspaces/QRLD/app/srcr/main/java/com/qrmaster/app/fragments/ScanFragment.java:46: error: incompatible types: FragmentActivity cannot be converted to ViewModelProviderImpl
        viewModel = new ViewModelProvider(requireActivity()).get(QRViewModel.class);
                                                         ^
/workspaces/QRLD/app/src/main/java/com/qrmaster/app/fragments/HistoryFragment.java:37: error: incompatible types: FragmentActivity cannot be converted to ViewModelProviderImpl
        viewModel = new ViewModelProvider(requireActivity()).get(QRViewModel.class);
                                                         ^
/workspaces/QRLD/app/src/main/java/com/qrmaster/app/fragments/CreateFragment.java:52: error: incompatible types: FragmentActivity cannot be converted to ViewModelProviderImpl
        viewModel = new ViewModelProvider(requireActivity()).get(QRViewModel.class);
                                                         ^
Note: /workspaces/QRLD/app/src/main/java/com/qrmaster/app/fragments/ScanFragment.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
8 errors

> Task :app:compileDebugJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 22s
26 actionable tasks: 7 executed, 19 up-to-date
